--- a/template/my_tuan_view_orders.htm
+++ b/template/my_tuan_view_orders.htm
@@ -26,7 +26,7 @@
 							<td class="icn"><a href="forum.php?mod=viewthread&tid=$tuan_thread[tid]" target="_blank"> <img src="source/plugin/etuan/static/icon_post.gif" /> </a></td>
 							<th> <a href="forum.php?mod=viewthread&tid=$tuan_thread[tid]" target="_blank">$tuan_thread[subject]</a> </th>
 							<td>{$tuan_thread[begin_date]} - {$tuan_thread[end_date]}</td>
-							<td class="by">{$tuan_thread[status]}</td>
+							<td class="by">{$order_statuss[$tuan_thread[status]]}</td>
 						</tr>
 					</table>
 </div>
@@ -53,7 +53,7 @@
 							  </tr>
 								<tr>
 								<td>{$tuan_order[id]}</td>
-								<td>{$tuan_order[status]}</td>
+								<td>{$order_statuss[$tuan_order[status]]}</td>
 								<td>{$tuan_order[buyer]}</td>
 								<td>{$tuan_order[area]}</td>
 								<td>{$tuan_order[contact_name]}</td>
