--- a/template/tuan_viewthread.htm
+++ b/template/tuan_viewthread.htm
@@ -1,10 +1,19 @@
 <!--{block return}-->
+<h3>开团时间</h3>
+<p>{$tuan[begin_date]} - {$tuan[end_date]}</p>
+<h3>参与方式</h3>
+<p>
+{$tuan[intro]}
+</p>
+
+
+
 <link rel="stylesheet" type="text/css" href="source/plugin/etuan/static/etuan.css" />
 <script type="text/javascript" src="source/plugin/etuan/static/etuan.js"></script>
 <div class="trdc xs1">
 <em>{lang etuan:tuan_thread_view_products}</em>
-<a href="">{lang etuan:tuan_thread_expand_all_products}</a>
-<a href="">{lang etuan:tuan_thread_collapse_all_products}</a>
+<a href="javascript:open_all_trade();">{lang etuan:tuan_thread_expand_all_products}</a>
+<a href="javascript:close_all_trade();">{lang etuan:tuan_thread_collapse_all_products}</a>
 </div>
 
 <!--{loop $products $k $product}-->
@@ -35,9 +44,10 @@
 </div>
 <div>
 <p class="pns mbm">
-</p><dl class="amount"><dt>我要买：</dt><dd><a class="reduce" href="javascript:reduce_trade_amount({$product['id']})">-</a><input type="text" value="1" id="trade_amount_{$product['id']}" onkeyup="set_trade_amount({$product['id']})" name="trade_amount"><a class="increase" href="javascript:increase_trade_amount({$product['id']})">+</a></dd></dl>
-<a onclick="return addTradeCart({$tuan['id']}, {$product['id']});" href="plugin.php?id=etuan:cart&tuid={$tuan['id']}&tpid={$product['id']}&quantity=1">加入购物车</a>
-&nbsp;<a href="http://wpa.qq.com/msgrd?V=1&amp;Uin={$tuan['seller_qq']}&amp;Site=$_G['setting']['bbname']&amp;Menu=yes" target="_blank" title="QQ"><img src="static/image/common/qq.gif" alt="QQ" style="vertical-align:middle">在线砍价</a><p></p>
+</p><dl class="amount"><dt>我要买：</dt><dd><a class="reduce" href="javascript:reduce_trade_amount({$product['id']})">-</a><input type="text" value="1"size=3 id="trade_amount_{$product['id']}" onkeyup="set_trade_amount({$product['id']})" name="trade_amount"><a class="increase" href="javascript:increase_trade_amount({$product['id']})">+</a><a onclick="return addTradeCart({$tuan['id']}, {$product['id']});" href="plugin.php?id=etuan:cart&tuid={$tuan['id']}&tpid={$product['id']}&quantity=1">加入购物车</a></dd></dl>
+<!--{if $tuan['seller_qq']}-->
+&nbsp;<a href="http://wpa.qq.com/msgrd?V=1&amp;Uin={$tuan['seller_qq']}&amp;Site=$_G['setting']['bbname']&amp;Menu=yes" target="_blank" title="QQ"><img src="static/image/common/qq.gif" alt="QQ" style="vertical-align:middle">在线砍价</a>
+<!--{/if}-->
 
 </div>
 </div>
@@ -46,7 +56,27 @@
 </div>
 <!--{/loop}-->
 
-<div id="cart_dummy" style="display:none">
-
+<div style="display:none">
+<span id="cart_dummy"></span>
 </div>
+<script type="text/javascript">
+<!--
+	function open_all_trade()
+	{
+	<!--{loop $products $k $product}-->
+	display('trade{$product[id]}');ajaxget('plugin.php?id=etuan:cart&op=detail&tu_id={$tuan['id']}&tp_id={$product[id]}','tradeinfo{$product[id]}','tradeinfo{$product[id]}')
+	<!--{/loop}-->
+	}
+	function close_all_trade()
+	{
+	<!--{loop $products $k $product}-->
+	$('tradeinfo{$product[id]}').style.display = 'none';
+	if($('trade{$product[id]}').style.display == 'none')
+	{
+		display('trade{$product[id]}');
+	}
+	<!--{/loop}-->
+	}
+//-->
+</script>
 <!--{/block}-->
