group select for address

--- a/template/cart_checkout.htm
+++ b/template/cart_checkout.htm
@@ -21,6 +21,7 @@
 				<div>
 				<input type="hidden" id="address_id" name="address_id" value="0"/>
 				<input type="hidden" id="ship_community_id" name="ship_community_id" value=""/>
+				<input type="hidden" id="ship_community_name" name="ship_community_name" value=""/>
 				<input type="hidden" id="ship_name" name="ship_name" value=""/>
 				<input type="hidden" id="ship_address" name="ship_address" value=""/>
 				<input type="hidden" id="ship_phone" name="ship_phone" value=""/>
