--- a/template/my_address.htm
+++ b/template/my_address.htm
@@ -34,7 +34,7 @@
 						<!--{eval $i=0;}-->
 						<!--{loop $list $value}-->
 						<tr <!--{if $i%2==0}-->class="a"<!--{/if}--> id="_address_{$value[id]}">
-							<td>$value[community_id]</td>
+							<td>$value[community_name]</td>
 							<td>$value[address]</td>
 							<td>$value[contact_name]</td>
 							<td>$value[phone]</td>
